added filter functions
added search and sorts (alphabetical and status)
need to add pagination